<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E4E4E4"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.reg.activity.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_name"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="@string/enter_your_name"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_mobile"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="@string/enter_your_mobile"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:inputType="phone"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="@string/enter_your_email"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="@string/enter_your_password"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:background="#ffffff"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_password_confirm"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:hint="@string/retype_your_password"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:textColor="@color/white"
            android:background="#E91E63"
            android:textSize="@dimen/_12ssp"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>