<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.photos.activity.PhotosActivity">

    <TextView
        android:visibility="gone"
        android:id="@+id/text_no_photos_found"
        android:text="@string/no_photos_found"
        android:textStyle="bold"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.Toolbar
        android:visibility="gone"
        android:id="@+id/toolbar"
        app:title="Photos"
        android:theme="@style/AppTheme.Toolbar"
        android:background="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <com.mlsdev.animatedrv.AnimatedRecyclerView
        android:id="@+id/photos_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_next_and_prev"
        android:layout_alignParentTop="true"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/layout_next_and_prev"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_prev_album"
            android:text="@string/previous_album"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="#D50000"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"/>

        <TextView
            android:id="@+id/text_next_album"
            android:text="@string/next_album"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="#00C853"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>