<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.photoDetails.PhotoDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:visibility="gone"
        android:id="@+id/toolbar"
        app:title="Album Details"
        android:theme="@style/AppTheme.Toolbar"
        android:background="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />

    <ImageView
        android:id="@+id/image_album"
        android:scaleType="centerCrop"
        android:src="@drawable/octopi_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:padding="@dimen/_16sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/albumid"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:gravity="start" />

            <TextView
                android:id="@+id/text_album_id"
                tools:text="1258"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/id"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:gravity="start" />

            <TextView
                android:id="@+id/text_id"
                tools:text="50"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:gravity="start" />

            <TextView
                android:id="@+id/text_title"
                tools:text="Octopi Technology Ltd."
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry"
                android:gravity="start" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>